tests/baselines/reference/jsDeclarationsTypeReferences4(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
index.js(4,18): error TS8006: 'namespace' declarations can only be used in TypeScript files.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== index.js (1 errors) ====
    /// <reference types="node" />
    export const Something = 2; // to show conflict that can occur
    // @ts-ignore
    export namespace A {
                     ~
!!! error TS8006: 'namespace' declarations can only be used in TypeScript files.
        // @ts-ignore
        export namespace B {
            const Something = require("fs").Something;
            const thing = new Something();
            // @ts-ignore
            export { thing };
        }
    }
    
==== node_modules/@types/node/index.d.ts (0 errors) ====
    declare module "fs" {
        export class Something {}
    }